# codedef

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
skills/code-outline/: SKILL.md
src/: main.rs
