[package]
name = "codedef"
version = "0.1.0"
edition = "2021"
authors = ["skiyer"]
description = "Extract code definitions (function, struct, class, etc.) from source files using tree-sitter"
license = "MIT"
readme = "README.md"
repository = "https://github.com/skiyer/codedef"
keywords = ["tree-sitter", "parser", "definition", "code-analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tree-sitter = "0.24"
tree-sitter-c = "0.23"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
