[package]
name = "codedef"
version = "0.2.0"
edition = "2021"
authors = ["skiyer"]
description = "Extract code definitions (function, struct, class, etc.) from source files using tree-sitter"
license = "MIT"
readme = "README.md"
repository = "https://github.com/skiyer/codedef"
keywords = ["tree-sitter", "parser", "definition", "code-analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tree-sitter = "0.24"
tree-sitter-c = "0.23"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
